io-takamaka-examples/src/main/java/io/takamaka/tests/errors/illegalaccesstononwhitelistedfield1/C.java
package io.takamaka.tests.errors.illegalaccesstononwhitelistedfield1;

public class C {

	public Object foo() {
		return System.out;
	}
}